// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default default 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
"
`;

exports[`default import all supported components 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedHTMLMessage, FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedHTMLMessage, {
    defaultMessage: "<span>hello</span>"
});
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
"
`;

exports[`default multiple uses 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "another"
});
"
`;

exports[`default using key 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
}, "foobar");
"
`;

exports[`default with FormattedMessage imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage as T } from 'react-intl';
/*#__PURE__*/ _jsx(T, {
    defaultMessage: "hello"
});
"
`;

exports[`default with FormattedMessage nested in other JSX 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx("div", {
    children: /*#__PURE__*/ _jsx(FormattedMessage, {
        defaultMessage: "hello"
    })
});
"
`;

exports[`default with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello world 2"
});
"
`;

exports[`default with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
var message = "variable message";
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: message
});
"
`;

exports[`extractComments = false default 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
"
`;

exports[`filebase = true default 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
"
`;

exports[`includeExportName = all default 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
"
`;

exports[`includeExportName = true default 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
"
`;

exports[`removePrefix = "src" default 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
"
`;

exports[`removePrefix = "src.__fixtures__" default 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
"
`;

exports[`removePrefix = "src/" -- with slash default 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
"
`;

exports[`removePrefix = /__fixtures__/ default 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
"
`;

exports[`removePrefix = false default 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
"
`;

exports[`removePrefix = true, includeExportName = all default 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
"
`;

exports[`removePrefix = true, includeExportName = true default 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
"
`;

exports[`useKey = true default 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
});
"
`;

exports[`useKey = true using key 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { FormattedMessage } from 'react-intl';
/*#__PURE__*/ _jsx(FormattedMessage, {
    defaultMessage: "hello"
}, "foobar");
"
`;
